--- a/cssfile/dashboard.css
+++ b/cssfile/dashboard.css
@@ -13,7 +13,7 @@ table {
     font-size: 14px;
 }
 
-.taab{
+.taab {
     border-top: none;
 }
 
@@ -52,6 +52,7 @@ body {
     font-size: 23px;
     font-weight: 700;
 }
+
 .recentText {
     color: #424A52;
     font-size: 23px;
@@ -84,6 +85,7 @@ body {
     box-shadow: 0 1px 1px 0 rgba(243, 113, 27, 0.349),
         0 1px 2px 0 rgba(121, 81, 29, 0.404);
 }
+
 .but {
     padding: 2px 8px;
     border-radius: 6px;
@@ -106,8 +108,9 @@ body {
     font-weight: 700;
     font-size: 12px;
     text-decoration: none;
-    
+
 }
+
 .but2 {
     padding: 2px 8px;
     border-radius: 6px;
@@ -117,5 +120,27 @@ body {
     font-weight: 700;
     font-size: 12px;
     text-decoration: none;
-    
+
+}
+
+.foot {
+    background-color: #21262b;
+    color: white;
+
+}
+
+.footerText {
+    text-align: center;
+    font-size: 17px;
+    text-align: center;
+}
+
+.footerLink {
+    color: #DD4F05;
+    font-size: 17px;
+    font-weight: bold;
+    text-decoration: none;
+}
+.footerLink:hover{
+    color: #DD4F05;
 }
