--- a/cssfile/style.css
+++ b/cssfile/style.css
@@ -106,6 +106,22 @@
     margin-top: 2px;
     margin-bottom: 2px;
 }
+.userSuccess {
+    color: green;
+    font-size: 13px;
+    font-weight: 600;
+    width: max-content;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+.accountSuccess {
+    color: green;
+    font-size: 13px;
+    font-weight: 600;
+    width: max-content;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
 
 
 
@@ -176,7 +192,7 @@ body {
     border-radius: 8px;
 }
 .log:hover{
-    color: #923403;
+    color: #fff;
 }
 
 input::placeholder {
